--- a/src/components/searchbar/Searchbar.css
+++ b/src/components/searchbar/Searchbar.css
@@ -3,18 +3,42 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    justify-content: space-between
+    justify-content: space-between;
+    margin-bottom: 0.5rem;
+    gap: 0.5rem;
+    position: relative;
 }
 
 .searchbar .textfield {
-    font-size: 1rem;
-    padding: 0.5rem;
+    font-size: 1.2rem;
+    padding: 0.8rem 0.8rem 0.8rem 2.5rem;
     outline: none;
+    width: 100%;
+    border-radius: 8px;
+    outline: none;
+    border: none;
+    background-color: var(--theme);
+    color: var(--light);
+}
+
+.searchbar .searchicon {
+    position: absolute;
+    left: 0.8rem;
+    color: var(--light);
+}
+
+::-webkit-input-placeholder {
+    color: var(--theme);
 }
 
 .searchbar .button {
     outline: none;
-    font-size: 1.2rem;
-    padding: 0.5rem;
-    cursor: pointer
+    padding: 0.75rem;
+    cursor: pointer;
+    border-radius: 8px;
+    outline: none;
+    border: none;
+    background-color: var(--light);
+    color: var(--theme);
+    aspect-ratio: 1/1;
 }
