--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+
+
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    font-family: 'Rubik';
+    --app-width: min(100%, 1400px);
+    --card-width: min(100%, 800px);
+    --background: #320a04;
+    --theme: #7a3112;
+    --light: #ffbe30;
+    color: #fff;
 }
 
 *,
@@ -13,4 +18,17 @@
     margin: 0;
     padding: 0;
     outline: none;
+}
+
+#root {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+body {
+    background-color: var(--background);
+    height: 100vh;
 }
