--- a/src/components/DateTime/DateTime.css
+++ b/src/components/DateTime/DateTime.css
@@ -10,3 +10,8 @@
 .datetime .time {
     font-size: 1.3rem;
 }
+@media screen and (max-width: 850px) {
+    .datetime {
+     align-items: center;
+    }
+   }
