--- a/src/components/InfoCards/InfoCard.css
+++ b/src/components/InfoCards/InfoCard.css
@@ -59,3 +59,95 @@
     height: 1.2em;
     margin-right: 1rem;
 }
+@media screen and (max-width: 600px) {
+    .time-card .sun-icon {
+        height: 1em;
+        margin-right: 0.8rem;
+    }
+    .info-card .icon {
+        font-size: 2rem;   
+    }
+    .info-card .value {
+        font-size: 1.5rem;
+        line-height: 1.2em;
+        font-weight: 500;
+    }
+
+    .info-card .field {
+        color: #ffffff8a;
+        font-size: 0.7rem;
+        font-weight: 300;
+    }
+    .info-card{
+        padding: 0.6rem;
+    }
+    .time-card .time{
+        font-size: 1.8rem !important;
+    }
+  }
+
+
+  @media screen and (max-width: 500px) {  
+    .time-card .time {
+        font-size: 1.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 0.2rem;
+    }
+    .time-card{
+        padding: 12px;
+    }
+    
+    .time-card .sun-icon {
+        height: 1em;
+        margin-right: 0.5rem;
+    }
+
+    .info-card .icon {
+        font-size: 1.7rem !important;
+        line-height: 1px;
+     
+    }
+
+    .info-card {
+        font-size: 1.5rem !important;
+        line-height: 1em;
+    
+    }
+    .value{
+        font-size:0.8rem !important ;
+    }
+    .field{
+        font-size: 0.6rem !important;
+    }
+    .time-card .time{
+        font-size: 1.8rem !important;
+    }
+   
+  }
+  @media screen and (max-width: 450px) {
+    .time-card .time {
+        font-size: 1.5rem !important;
+    }
+  }
+
+
+
+  @media screen and (max-width: 380px) {
+    .time-card {
+        padding: 10px;
+    }
+    .time-card .time {
+        font-size: 1.4rem !important;
+    }
+    .time-card{
+        justify-content: space-between;
+    }
+  }
+
+  @media screen and (max-width: 330px) {
+    .time-card .time {
+        font-size: 1.3rem !important;
+    }
+  }
