--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
     outline: none;
@@ -32,3 +31,8 @@ body {
     background-color: var(--background);
     height: 100vh;
 }
+@media screen and (max-width: 730px) {
+    *{
+        font-size: 12px;
+    }
+   }
